--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Copenhagen",
-  "author": "Zendesk",
+  "name": "Oak Park",
+  "author": "Christian Fountain",
   "version": "1.5.0",
   "api_version": 1,
   "default_locale": "en-us",
