--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
       "type": "color",
       "description": "brand_color_description",
       "label": "brand_color_label",
-      "value": "#0072EF"
+      "value": "#1B568B"
     }, {
       "identifier": "brand_text_color",
       "type": "color",
@@ -35,13 +35,13 @@
       "type": "color",
       "description": "background_color_description",
       "label": "background_color_label",
-      "value": "#FFFFFF"
+      "value": "#E8EEF3"
     }, {
       "identifier": "header_color",
       "type": "color",
       "description": "header_color_description",
       "label": "header_color_label",
-      "value": "#FFFFFF"
+      "value": "#1B568B"
     }]
   }, {
     "label": "fonts_group_label",
